# IdeaForge

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PERFORMANCE.md  README.md  ROADMAP.md  config.toml.example  ideaforge.py  pyproject.toml  requirements.txt
.cursor/: hooks.json
ideaforge/: __init__.py  archive_status.py  audio_util.py  backends.py  branding.py  chunks.py  cli.py  config.py  config_validate.py  daemon.py  device.py  device_profiles.py  device_registry.py  diarize.py  export.py  fleet.py  gpu_lock.py  health.py  ingest.py  llm.py  log_util.py  menubar_app.py  notify.py  pipeline.py  prompts.py  remote_sync.py  reprocess.py  runner.py  schema.py  session_pool.py  session_time.py  session_worker.py  speaker_library.py  speakers.py  state_db.py  status.py  sync_cli.py  transcribe.py  transcription_types.py
ideaforge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: common.sh  install-daemon.sh  install-menubar.sh  run-daemon.sh  run-menubar.sh  save-grok-session.sh  save_grok_session.py  stop-daemon.sh  stop-menubar.sh  trust-project-hooks.sh  uninstall-daemon.sh  uninstall-menubar.sh
tests/: test_archive_status.py  test_audio_normalize.py  test_audio_util.py  test_branding.py  test_chunk_merge_integration.py  test_chunks.py  test_chunks_split.py  test_config.py  test_config_validate.py  test_daemon.py  test_daemon_config.py  test_daemon_ingest.py  test_daemon_multi_device.py  test_device.py  test_device_chunk_mode.py  test_device_clock.py  test_device_config.py  test_diarize.py  (+39 more)
(+4 files in other folders)
