[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ideaforge"
version = "0.5.4"
description = "Local-first pipeline for USB voice recorders"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.0.0",
    "numpy>=1.24.0",
    "ollama>=0.3.0",
    "tqdm>=4.66",
    "openai>=1.0.0",
]

[project.optional-dependencies]
mlx = ["mlx-whisper>=0.4.0", "scipy>=1.10.0"]
diarize = ["pyannote.audio>=3.1.0", "torch>=2.0.0"]
claude = ["anthropic>=0.40.0"]
all = [
    "mlx-whisper>=0.4.0",
    "scipy>=1.10.0",
    "pyannote.audio>=3.1.0",
    "torch>=2.0.0",
    "anthropic>=0.40.0",
    "rumps>=0.4.0",
]
menubar = ["rumps>=0.4.0"]
dev = ["pytest>=7.0"]

[project.scripts]
ideaforge = "ideaforge.cli:main"
ideaforge-menubar = "ideaforge.menubar_app:main"

[tool.setuptools.packages.find]
include = ["ideaforge*"]

[tool.setuptools.package-data]
ideaforge = ["assets/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]